--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,41 @@
 ---
+import "../styles/global.css";
 
+const pageTitle: string = "About me";
+
+type TIdentity = {
+  firstName: string;
+  country: string;
+  occupation: string;
+  hobbies: string[];
+};
+
+const identity: TIdentity = {
+  firstName: "Edson",
+  country: "Brazil",
+  occupation: "Software Developer",
+  hobbies: ["Web Development", "Reading", "Video Editing", "Gaming"],
+};
+
+const skills: string[] = [
+  "HTML",
+  "CSS",
+  "JavaScript",
+  "React",
+  "Tailwind",
+  "NextJS",
+  "NodeJS",
+  "Express",
+  "Fastify",
+];
+
+const happy: boolean = true;
+const finished: boolean = false;
+const goal: number = 3;
+
+const skillColor: string = "navy";
+const fontWeight: string = "bold";
+const textCase: string = "uppercase";
 ---
 
 <html lang="en">
@@ -7,10 +43,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
-    <title>My first Astro app</title>
-    <style>
+    <title>{pageTitle}</title>
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
       h1 {
-        color: orange;
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
       }
     </style>
   </head>
@@ -18,7 +60,7 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>About Me</h1>
+    <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
     <p>
       I am working through Astro's introductory tutorial. This is the second
@@ -28,5 +70,35 @@
       This site will update as I complete the tutorial, so keep checking back
       and see how my journey is going!
     </p>
+    <p>Here are a few facts about me:</p>
+    <ul>
+      <li>My name is {identity.firstName}.</li>
+      <li>
+        I live in {identity.country} and I work as a {identity.occupation}.
+      </li>
+      {
+        identity.hobbies.length >= 2 && (
+          <li>
+            Two hobbies of mine are: {identity.hobbies[0]} and{" "}
+            {identity.hobbies[1]}
+          </li>
+        )
+      }
+    </ul>
+    <p>My skills are:</p>
+    <ul>
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
+    </ul>
+    {happy && <p>I am happy to be learning Astro!</p>}
+
+    {finished && <p>I finished this tutorial!</p>}
+
+    {
+      goal === 3 ? (
+        <p>My goal is to finish in 3 days.</p>
+      ) : (
+        <p>My goal is not 3 days.</p>
+      )
+    }
   </body>
 </html>
