feat(pages): :lipstick: implements Footer and Header with scripts to toggle hamburguer menu

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,9 @@
 ---
+import "../styles/global.css";
+
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+
 const pageTitle: string = "My Astro Learning Blog";
 ---
 
@@ -15,9 +20,7 @@ const pageTitle: string = "My Astro Learning Blog";
     </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
     <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
@@ -25,5 +28,9 @@ const pageTitle: string = "My Astro Learning Blog";
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+    <Footer />
+    <script>
+      import "../scripts/menu";
+    </script>
   </body>
 </html>
