--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,8 @@
 ---
-import "../styles/global.css";
-
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header.astro";
-
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle: string = "Home Page";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-    <style>
-      h1 {
-        color: orange;
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <h1>{pageTitle}</h1>
-    <Footer />
-    <script>
-      import "../scripts/menu";
-    </script>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+</BaseLayout>
